セルフチェック完了

--- a/index.html
+++ b/index.html
@@ -15,57 +15,57 @@
   </head>
   <body>
     <header class="header">
-      <div class="inner header_inner">   
-        <a class="btn contact_btn">Contact</a>
+      <div class="inner">   
+        <div class="btn contact_btn"><a href="">Contact</a></div>
         <i class="bolt fas fa-bolt fa-2x"></i>
       </div> 
     </header>
     <main class="main">
       <div class="title">
         <div class="inner">
-          <h1 class="main_title">Bolt Theme</h1>
+          <h1 class="main_title f-raleway">Bolt Theme</h1>
           <h2 class="headline">
             <p class="headline_text">FREE BOOTSTRAP THEMES</p>
           </h2>
         </div>
       </div>
       <section class="WHAT-WE-CAN-DO">
-        <div class="inner iphone_inner">
-          <div class="iphone_title">
-            <h3 class="sub_title1">WHAT WE CAN DO?</h3>
+        <div class="inner">
+          <div class="iphone_title_text_box">
+            <h3 class="sub_title1 f-raleway">WHAT WE CAN DO?</h3>
             <p class="iphone_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </div>
           <div class="clearfix">
             <div class="iphone_picture">
               <img src="img/iphone.png">
-            </div>
+            </div>>
           </div>
         </div>
       </section>
       <article class="article">
         <div class="inner">
-          <h4 class="sub_title2">OUR LATEST WORK</h4>
+          <h4 class="sub_title2 f-raleway">OUR LATEST WORK</h4>
           <div class="clearfix">
             <div class="OUR-LATEST-WORK-img">
               <ul class="OUR-LATEST-WORK-list">               
-                <li><a><img src="img/01.jpg"></a></li>
-                <li><a><img src="img/02.jpg"></a></li>
-                <li><a><img src="img/03.jpg"></a></li>
-                <li><a><img src="img/04.jpg"></a></li>
-                <li><a><img src="img/05.jpg"></a></li>
-                <li><a><img src="img/06.jpg"></a></li>
+                <li><a href=""><img src="img/01.jpg"></a></li>
+                <li><a href=""><img src="img/02.jpg"></a></li>
+                <li><a href=""><img src="img/03.jpg"></a></li>
+                <li><a href=""><img src="img/04.jpg"></a></li>
+                <li><a href=""><img src="img/05.jpg"></a></li>
+                <li><a href=""><img src="img/06.jpg"></a></li>
               </ul>
             </div>
           </div>
           <div class="text_box">
             <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a class="btn email_btn">Email Me!</a>
+            <div class="btn email_btn"><a href="">Email Me!</a></div>
           </div>
         </div>
       </article>
       <section class="OUR-SKILLS">
         <div class="inner">
-          <h5 class="sub_title3">OUR SKILLS</h5>
+          <h5 class="sub_title3 f-raleway">OUR SKILLS</h5>
           <div class="clearfix">
             <div class="circle">
               <figure>
@@ -92,15 +92,15 @@
       <nav class="nav">
         <div class="inner">
           <ul class="sns_list clearfix">
-            <li><i class="sns fab fa-facebook-f fa-3x"></i></li>
-            <li><i class="sns fab fa-dribbble fa-3x"></i></li>
-            <li><i class="sns fab fa-twitter fa-3x"></i></li>
-            <li><i class="sns fas fa-envelope fa-3x"></i></li>
+            <li><a href=""><i class="sns fab fa-facebook-f fa-3x"></i></a></li>
+            <li><a href=""><i class="sns fab fa-dribbble fa-3x"></i></a></li>
+            <li><a href=""><i class="sns fab fa-twitter fa-3x"></i></a></li>
+            <li><a href=""><i class="sns fas fa-envelope fa-3x"></i></a></li>
           </ul>
         </div>
       </nav>
     <footer class="footer">
-      <div class="inner footer_inner">
+      <div class="inner">
         <div class="clearfix">
           <p class="footer_text">Craftedwith <i class="icon fas fa-heart"></i> BlackTie.co.</p>
         </div>  
