--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="bolt,boostrap,portfolio">
     <meta name="description" content="This is my portfolio site.">
     <meta name="format-detection" content="telephone=no">
@@ -15,39 +15,41 @@
   </head>
   <body>
     <header class="header">
-      <div class="inner">   
-        <div class="btn contact_btn"><a href="">Contact</a></div>
-        <i class="bolt fas fa-bolt fa-2x"></i>
+      <div class="header_inner inner">
+        <div class="clearfix">  
+          <i class="bolt fas fa-bolt fa-2x"></i>
+          <div class="pull_right">
+            <a href=""><div class="btn contact_btn">Contact</div></a>
+          </div>
+        </div> 
       </div> 
     </header>
     <main class="main">
       <div class="title">
         <div class="inner">
           <h1 class="main_title f-raleway">Bolt Theme</h1>
-          <h2 class="headline">
+          <div class="headline">
             <p class="headline_text">FREE BOOTSTRAP THEMES</p>
-          </h2>
+          </div>
         </div>
       </div>
-      <section class="WHAT-WE-CAN-DO">
-        <div class="inner">
-          <div class="iphone_title_text_box">
-            <h3 class="sub_title1 f-raleway">WHAT WE CAN DO?</h3>
-            <p class="iphone_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-          </div>
-          <div class="clearfix">
+      <section class="what-we-can-do">
+        <div class="inner clearfix">
+          <div class="iphone_area">
             <div class="iphone_picture">
               <img src="img/iphone.png">
-            </div>>
+            </div>
+            <div class="iphone_title_text_box">
+              <h2 class="what-we-can-do_title f-raleway">WHAT WE CAN DO?</h2>
+              <p class="iphone_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
           </div>
         </div>
       </section>
-      <article class="article">
+      <article class="our-latest-work">
         <div class="inner">
-          <h4 class="sub_title2 f-raleway">OUR LATEST WORK</h4>
-          <div class="clearfix">
-            <div class="OUR-LATEST-WORK-img">
-              <ul class="OUR-LATEST-WORK-list">               
+          <h2 class="our_latest_work_title f-raleway">OUR LATEST WORK</h2>
+              <ul class="our-latest-work-list clearfix">               
                 <li><a href=""><img src="img/01.jpg"></a></li>
                 <li><a href=""><img src="img/02.jpg"></a></li>
                 <li><a href=""><img src="img/03.jpg"></a></li>
@@ -55,37 +57,33 @@
                 <li><a href=""><img src="img/05.jpg"></a></li>
                 <li><a href=""><img src="img/06.jpg"></a></li>
               </ul>
+            <div class="text_box">
+              <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+              <div class="work_btn"><a href=""><div class="btn email_btn">Email Me!</div></a></div>    
             </div>
-          </div>
-          <div class="text_box">
-            <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <div class="btn email_btn"><a href="">Email Me!</a></div>
-          </div>
         </div>
       </article>
-      <section class="OUR-SKILLS">
+      <section class="oue-skills">
         <div class="inner">
-          <h5 class="sub_title3 f-raleway">OUR SKILLS</h5>
-          <div class="clearfix">
-            <div class="circle">
-              <figure>
-                <img src="img/circle_01.png">
-                <figcaption>JavaScirpt</figcaption>
-              </figure>
-              <figure>
-                <img src="img/circle_02.png">
-                <figcaption>Bootstrap</figcaption>
-              </figure>
-              <figure>
-                <img src="img/circle_03.png">
-                <figcaption>WordPress</figcaption>
-              </figure>
-              <figure>
-                <img src="img/circle_04.png">
-                <figcaption>Photshop</figcaption>
-              </figure>
+          <h2 class="our_skills_title f-raleway">OUR SKILLS</h2>
+            <div class="circle clearfix">
+                <figure class="javascript circle_mix">
+                  <img src="img/circle_01.png">
+                  <figcaption class="javascript_title circle_text">JavaScript</figcaption>
+                </figure>
+                <figure class="boostrap circle_mix">
+                  <img src="img/circle_02.png">
+                  <figcaption class="boostrap_title circle_text">Bootstrap</figcaption>
+                </figure>_
+                <figure class="wordpress circle_mix">
+                  <img src="img/circle_03.png">
+                  <figcaption class="wordpress_title circle_text">WordPress</figcaption>
+                </figure>
+                <figure class="photshop circle_mix">
+                  <img src="img/circle_04.png">
+                  <figcaption class="photshop_title circle_text">Photshop</figcaption>
+                </figure>
             </div>
-          </div>
         </div>
       </section>
     </main>
@@ -101,10 +99,8 @@
       </nav>
     <footer class="footer">
       <div class="inner">
-        <div class="clearfix">
-          <p class="footer_text">Craftedwith <i class="icon fas fa-heart"></i> BlackTie.co.</p>
-        </div>  
-      </div>
+        <p class="footer_text">Craftedwith <i class="icon fas fa-heart"></i> BlackTie.co.</p>
+      </div>  
     </footer>
   </body>
 </html>
