1回目レビュー後の修正

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </section>
     </main>
-      <nav class="nav">
+      <nav class="nav_sns">
         <div class="inner">
           <ul class="sns_list clearfix">
             <li><a href=""><i class="sns fab fa-facebook-f fa-3x"></i></a></li>
