2回目レビュー後の修正

--- a/index.html
+++ b/index.html
@@ -15,22 +15,17 @@
   </head>
   <body>
     <header class="header">
-      <div class="header_inner inner">
-        <div class="clearfix">  
-          <i class="bolt fas fa-bolt fa-2x"></i>
-          <div class="pull_right">
-            <a href=""><div class="btn contact_btn">Contact</div></a>
-          </div>
-        </div> 
+      <div class="header_inner clearfix inner">  
+        <i class="bolt fas fa-bolt fa-2x"></i>
+        <a href class="btn contact_btn">Contact</a>
+        </div>
       </div> 
     </header>
     <main class="main">
       <div class="title">
         <div class="inner">
           <h1 class="main_title f-raleway">Bolt Theme</h1>
-          <div class="headline">
-            <p class="headline_text">FREE BOOTSTRAP THEMES</p>
-          </div>
+          <p class="headline_text">FREE BOOTSTRAP THEMES</p>
         </div>
       </div>
       <section class="what-we-can-do">
@@ -49,54 +44,55 @@
       <article class="our-latest-work">
         <div class="inner">
           <h2 class="our_latest_work_title f-raleway">OUR LATEST WORK</h2>
-              <ul class="our-latest-work-list clearfix">               
-                <li><a href=""><img src="img/01.jpg"></a></li>
-                <li><a href=""><img src="img/02.jpg"></a></li>
-                <li><a href=""><img src="img/03.jpg"></a></li>
-                <li><a href=""><img src="img/04.jpg"></a></li>
-                <li><a href=""><img src="img/05.jpg"></a></li>
-                <li><a href=""><img src="img/06.jpg"></a></li>
-              </ul>
-            <div class="text_box">
-              <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-              <div class="work_btn"><a href=""><div class="btn email_btn">Email Me!</div></a></div>    
-            </div>
+          <ul class="our-latest-work-list clearfix">               
+            <li><a href=""><img src="img/01.jpg"></a></li>
+            <li><a href=""><img src="img/02.jpg"></a></li>
+            <li><a href=""><img src="img/03.jpg"></a></li>
+            <li><a href=""><img src="img/04.jpg"></a></li>
+            <li><a href=""><img src="img/05.jpg"></a></li>
+            <li><a href=""><img src="img/06.jpg"></a></li>
+          </ul>
+          <div class="text_box">
+            <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <div class="work_btn">
+              <a href class="btn email_btn">Email Me!</a>    
+          </div>
         </div>
       </article>
       <section class="oue-skills">
         <div class="inner">
           <h2 class="our_skills_title f-raleway">OUR SKILLS</h2>
-            <div class="circle clearfix">
-                <figure class="javascript circle_mix">
-                  <img src="img/circle_01.png">
-                  <figcaption class="javascript_title circle_text">JavaScript</figcaption>
-                </figure>
-                <figure class="boostrap circle_mix">
-                  <img src="img/circle_02.png">
-                  <figcaption class="boostrap_title circle_text">Bootstrap</figcaption>
-                </figure>_
-                <figure class="wordpress circle_mix">
-                  <img src="img/circle_03.png">
-                  <figcaption class="wordpress_title circle_text">WordPress</figcaption>
-                </figure>
-                <figure class="photshop circle_mix">
-                  <img src="img/circle_04.png">
-                  <figcaption class="photshop_title circle_text">Photshop</figcaption>
-                </figure>
-            </div>
+          <div class="circle clearfix">
+            <figure class="javascript circle_mix">
+              <img src="img/circle_01.png">
+              <figcaption class="javascript_title circle_text">JavaScript</figcaption>
+            </figure>
+            <figure class="boostrap circle_mix">
+              <img src="img/circle_02.png">
+              <figcaption class="boostrap_title circle_text">Bootstrap</figcaption>
+            </figure>
+            <figure class="wordpress circle_mix">
+              <img src="img/circle_03.png">
+              <figcaption class="wordpress_title circle_text">WordPress</figcaption>
+            </figure>
+            <figure class="photshop circle_mix">
+              <img src="img/circle_04.png">
+              <figcaption class="photshop_title circle_text">Photshop</figcaption>
+            </figure>
+          </div>
         </div>
       </section>
     </main>
-      <nav class="nav_sns">
-        <div class="inner">
-          <ul class="sns_list clearfix">
-            <li><a href=""><i class="sns fab fa-facebook-f fa-3x"></i></a></li>
-            <li><a href=""><i class="sns fab fa-dribbble fa-3x"></i></a></li>
-            <li><a href=""><i class="sns fab fa-twitter fa-3x"></i></a></li>
-            <li><a href=""><i class="sns fas fa-envelope fa-3x"></i></a></li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="nav_sns">
+      <div class="inner">
+        <ul class="sns_list">
+          <li class="sns_item"><a href class="sns"><i class="fab fa-facebook-f fa-3x"></i></a></li>
+          <li class="sns_item"><a href class="sns"><i class="fab fa-dribbble fa-3x"></i></a></li>
+          <li class="sns_item"><a href class="sns"><i class="fab fa-twitter fa-3x"></i></a></li>
+          <li class="sns_item"><a href class="sns"><i class="fas fa-envelope fa-3x"></i></a></li>
+        </ul>
+      </div>
+    </nav>
     <footer class="footer">
       <div class="inner">
         <p class="footer_text">Craftedwith <i class="icon fas fa-heart"></i> BlackTie.co.</p>
