--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
     <meta name="keywords" content="bolt,boostrap,portfolio">
     <meta name="description" content="This is my portfolio site.">
     <meta name="format-detection" content="telephone=no">
@@ -18,6 +18,10 @@
       <div class="header_inner clearfix inner">  
         <i class="bolt fas fa-bolt fa-2x"></i>
         <a href class="btn contact_btn">Contact</a>
+        <div class="humberger">
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </div> 
     </header>
@@ -29,7 +33,7 @@
         </div>
       </div>
       <section class="what-we-can-do">
-        <div class="inner clearfix">
+        <div class="inner">
           <div class="iphone_area">
             <div class="iphone_picture">
               <img src="img/iphone.png">
@@ -55,14 +59,15 @@
           <div class="text_box">
             <p class="work_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
             <div class="work_btn">
-              <a href class="btn email_btn">Email Me!</a>    
+              <a href class="btn email_btn">Email Me!</a>
+            </div>   
           </div>
         </div>
       </article>
       <section class="oue-skills">
         <div class="inner">
           <h2 class="our_skills_title f-raleway">OUR SKILLS</h2>
-          <div class="circle clearfix">
+          <div class="circle">
             <figure class="javascript circle_mix">
               <img src="img/circle_01.png">
               <figcaption class="javascript_title circle_text">JavaScript</figcaption>
