1回目レビュー後の修正

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="header_inner clearfix inner">  
         <i class="bolt fas fa-bolt fa-2x"></i>
         <a href class="btn contact_btn">Contact</a>
-        <div class="humberger">
+        <a href class="humberger">
           <div></div>
           <div></div>
           <div></div>
-        </div>
+        </a>
       </div> 
     </header>
     <main class="main">
